# schedra

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  api-specification.md  architecture.md  service-description.md
.github/actions/wireguard-setup/: action.yaml
app/backend/: README.md  main.py  pyproject.toml
app/backend/schedra/: main.py
app/frontend/: package-lock.json  package.json
app/frontend/public/: index.html
app/frontend/src/: index.js  style.css
